<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmWakeUp</string>
    <string name="action_settings">Settings</string>
    <string name="stunde">Stunde :</string>
    <string name="minute">Minute :</string>
    <string name="editText1">1</string>
    <string name="editText2">1</string>
    <string name="Absenden">Absenden</string>
    <string name="stop">Player Stop</string>
    <string name="monat">Monat :</string>
    <string name="tag">Tag :</string>

    <drawable name="hintergrund">#ACDDCC</drawable>

    <color name="relativelayouthintergrund">#000000</color>

    <string name="title_activity_video2">Video2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_audioplayer">AudioplayerActivity</string>
    <string name="title_activity_video">VideoActivity</string>

</resources>
